deploy: 6f9c55695a383cdad6969b37d0c0fff51fe26d48

--- a/events-archive.html
+++ b/events-archive.html
@@ -67,7 +67,25 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://devoxx.be/">Devoxx 2023</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/296580070/">Opentelemetry and continuous feedback & Your tests also need some architecting</a>
+                </div>
+                <span>
+                    Brugge - Wed 15 November 2023
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    OpenTelemetry and Continuous Feedback - Things you need to know about your Java code at runtime
+                                        <span class="small">by Roni Dover</span>
+                                </li>
+                                <li class="ms-4">
+                                    Your tests also need some architecting
+                                        <span class="small">by Jonas Geiregat</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a data-toggle="tooltip" title="This event is not hosted by us, but we do promote the event." class="link-secondary" href="https://devoxx.be/">Devoxx 2023</a>
                 </div>
                 <span>
                     Antwerp - Mon 2 October 2023
@@ -75,21 +93,43 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://www.meetup.com/belgian-java-user-group/events/294251222/">Growing Beyond Senior</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/295051128/">Composable Architecture & Event Sourced Applications without Grey Hair</a>
                 </div>
                 <span>
-                    Gembloux - Fri 7 July 2023
+                    Leuven - Thu 7 September 2023
                         <ul class="list-unstyled">
                                 <li class="ms-4">
-                                    Growing Beyond Senior
-                                        <span class="small">by Bruno Souza</span>
+                                    How Composable Architectures can actually solve the reasons for Microservices
+                                        <span class="small">by Edwin Derks</span>
+                                </li>
+                                <li class="ms-4">
+                                    Event Sourced Applications without Grey Hair
+                                        <span class="small">by Renato Cavalcanti</span>
                                 </li>
                         </ul>
                 </span>
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://www.meetup.com/belgian-java-user-group/events/293805252/">Hybrid Cloud Applications and Cloud-Native Dev Tools</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/294251222/">Beyond Senior Java Dev</a>
+                </div>
+                <span>
+                    Gembloux - Fri 7 July 2023
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Beyond Senior Java Dev: the next steps for the technical career
+                                        <span class="small">by Bruno "Javaman" Souza</span>
+                                </li>
+                                <li class="ms-4">
+                                    Beyond Senior Java Dev: Q&A with Java Champions
+                                        <span class="small">by Bruno "Javaman" Souza, Tom Cools, Edwin Derks, Maarten Mulders</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/293805252/">Hybrid Cloud Applications & Cloud-Native Dev Tools</a>
                 </div>
                 <span>
                     Brussel - Thu 22 June 2023
@@ -107,7 +147,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://brussels.voxxeddays.com/">Voxxed Days Brussels 2023</a>
+                            <a data-toggle="tooltip" title="This event is not hosted by us, but we do promote the event." class="link-secondary" href="https://brussels.voxxeddays.com/">Voxxed Days Brussels 2023</a>
                 </div>
                 <span>
                     Brussels - Tue 23 May 2023
@@ -115,7 +155,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://www.meetup.com/belgian-java-user-group/events/292729580/">BeJUG Speaker Training April</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/292729580/">BeJUG Speaker Training April</a>
                 </div>
                 <span>
                     Brussel - Thu 27 April 2023
@@ -129,7 +169,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://www.meetup.com/belgian-java-user-group/events/292156325/">BeJUG April</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/292156325/">BeJUG April</a>
                 </div>
                 <span>
                     Leuven - Tue 18 April 2023
@@ -143,7 +183,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://www.meetup.com/belgian-java-user-group/events/290693260/">BeJUG March</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/290693260/">BeJUG March</a>
                 </div>
                 <span>
                     Kortrijk - Thu 30 March 2023
@@ -157,7 +197,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://fosdem.org/2023/schedule/track/friends_of_openjdk/">Fosdem 2023</a>
+                            <a data-toggle="tooltip" title="This event is not hosted by us, but we do promote the event." class="link-secondary" href="https://fosdem.org/2023/schedule/track/friends_of_openjdk/">Fosdem 2023</a>
                 </div>
                 <span>
                     Brussels - Sun 5 February 2023
@@ -165,7 +205,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://www.meetup.com/belgian-java-user-group/events/290631492/">BeJUG January</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/290631492/">BeJUG January</a>
                 </div>
                 <span>
                     Mechelen - Mon 23 January 2023
@@ -179,7 +219,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        <a href="https://www.meetup.com/belgian-java-user-group/events/289451067/">BeJUG November</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/289451067/">BeJUG November</a>
                 </div>
                 <span>
                     Brussels - Thu 24 November 2022
