--- a/visit-belgium-tips.html
+++ b/visit-belgium-tips.html
@@ -293,10 +293,20 @@ micro roastery.</p>
             <ul class="list-unstyled">
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://devoxx.be/">Devoxx 2023</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/296580070/">Opentelemetry and continuous feedback & Your tests also need some architecting</a>
                             </div>
                             <span>
-                                Antwerp - Mon 2 October 2023
+                                Brugge - Wed 15 November 2023
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                OpenTelemetry and Continuous Feedback - Things you need to know about your Java code at runtime
+                                                    <span class="small">by Roni Dover</span>
+                                            </li>
+                                            <li class="ms-4">
+                                                Your tests also need some architecting
+                                                    <span class="small">by Jonas Geiregat</span>
+                                            </li>
+                                    </ul>
                             </span>
                         </li>
                 <div class="small float-end">
