deploy: ad7b8cb86ea3b106890bcfda179eeda1c2ac3415

--- a/events-archive.html
+++ b/events-archive.html
@@ -67,6 +67,86 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/300215950/">You Can Build Web UI Using Java Only & Braving the Change</a>
+                </div>
+                <span>
+                    Haute école Léonard de Vinci - Tue 23 April 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    You Can Build Web UI Using Java Only
+                                        <span class="small">by Sami Ekblad</span>
+                                </li>
+                                <li class="ms-4">
+                                    Braving the Change: recalibrating to new realities
+                                        <span class="small">by Tom Cools</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/299479389/">Java 22 - Treats for Everyone & Developer Productivity with Jakarta EE 11</a>
+                </div>
+                <span>
+                    Continuum Consulting NV - Tue 19 March 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Java 22 - Treats for Everyone!
+                                        <span class="small">by Simon Verhoeven</span>
+                                </li>
+                                <li class="ms-4">
+                                    Boost Performance and Developer Productivity with Jakarta EE 11
+                                        <span class="small">by Ivar Grimstad</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/298755642/">Lille invades Kortrijk: Kestra (Event Orchestrator) + Apache Pulsar (Messaging)</a>
+                </div>
+                <span>
+                    Sweet Mustard - Mon 26 February 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Kestra: an OpenSource Event Driven Declarative Orchestrator written in Java
+                                        <span class="small">by Loïc Mathieu</span>
+                                </li>
+                                <li class="ms-4">
+                                    Apache Pulsar: Finally an Alternative to Kafka?
+                                        <span class="small">by Julien Jakubowski</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/298467787/">Lightning Talk Night!</a>
+                </div>
+                <span>
+                    Faculté polytechnique de Mons - Thu 25 January 2024
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/297395858/">Distributed Background Jobs with JobRunr & Maintenance Scheduling with Timefold</a>
+                </div>
+                <span>
+                    MeetDistrict Ghelamco Arena - Tue 5 December 2023
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    A Java 8 Lambda and JobRunr is all you need for distributed background jobs
+                                        <span class="small">by Ronald Dehuysser</span>
+                                </li>
+                                <li class="ms-4">
+                                    Fold time and space for maintenance scheduling
+                                        <span class="small">by Geoffrey De Smet</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/296580070/">Opentelemetry and continuous feedback & Your tests also need some architecting</a>
                 </div>
                 <span>
