--- a/index.html
+++ b/index.html
@@ -72,26 +72,8 @@
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
-                        <li class="mb-2">
-                            <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/296580070/">Opentelemetry and continuous feedback & Your tests also need some architecting</a>
-                            </div>
-                            <span>
-                                Brugge - Wed 15 November 2023
-                                    <ul class="list-unstyled">
-                                            <li class="ms-4">
-                                                OpenTelemetry and Continuous Feedback - Things you need to know about your Java code at runtime
-                                                    <span class="small">by Roni Dover</span>
-                                            </li>
-                                            <li class="ms-4">
-                                                Your tests also need some architecting
-                                                    <span class="small">by Jonas Geiregat</span>
-                                            </li>
-                                    </ul>
-                            </span>
-                        </li>
                 <div class="small float-end">
-                    <a href="https://github.com/belgian-jug/belgian-jug.github.io/blob/main/data/events.yml">Add event</a>
+                    <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
                     <a href="events-archive.html">Archive</a>
                 </div>
@@ -108,7 +90,8 @@
             </ul>
             <div class="mb-4">
                 <a class="m-1" style="color: #55acee" href="https://twitter.com/BeJUG" role="button"><i class="fa-brands fa-twitter"></i></a>
-                <a class="m-1" style="color: #333" href="https://github.com/belgian-jug" role="button"><i class="fa-brands fa-github"></i></a>
+                <a class="m-1" style="color: #0077b5" href="https://www.linkedin.com/groups/155664/" role="button"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="m-1" style="color: #333" href="https://github.com/bejug" role="button"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </div>
