deploy: 5ef703e4ba8eec1735d7e813b2a963ce240bcab0

--- a/events-archive.html
+++ b/events-archive.html
@@ -67,6 +67,95 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/">Secret</a>
+                </div>
+                <span>
+                    / - Tue 5 November 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Not known yet
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/303888738">Open Rewrite: A la carte</a>
+                </div>
+                <span>
+                    Sopra Steria - Thu 24 October 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Open Rewrite: A la carte
+                                        <span class="small">by Tim te Beek</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/303217368">Testing done right + Maven Marvels</a>
+                </div>
+                <span>
+                    Burgerij Eilandje - Axxes - Thu 26 September 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Testing done right: From bugs to brilliance
+                                        <span class="small">by Wouter Bauweraerts</span>
+                                </li>
+                                <li class="ms-4">
+                                    Maven Marvels: Project Generation at Warp Speed
+                                        <span class="small">by Giovanni van der Schelde</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/301849208">[ONLINE] Community Participation Call</a>
+                </div>
+                <span>
+                    Online - Thu 27 June 2024
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/301217259">Pair Programming with GitHub Copilot + Lessons learned from #JavaOnRaspberryPi</a>
+                </div>
+                <span>
+                    TVH - Vichtseweg 129, 8790 Waregem - Mon 24 June 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    The Future of Pair Programming with GitHub Copilot
+                                        <span class="small">by Nick Bauters</span>
+                                </li>
+                                <li class="ms-4">
+                                    Lessons Learned from #JavaOnRaspberryPi, the Potential of Bits and Bytes, Cost and Eco-Efficiency
+                                        <span class="small">by Frank Delporte</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/300799323">Generative AI in practice and Future-Proofing Your Software</a>
+                </div>
+                <span>
+                    Oniryx - Wed 29 May 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Generative AI in practice: Concrete LLM use cases in Java, with Gemini
+                                        <span class="small">by Guillaume Laforge</span>
+                                </li>
+                                <li class="ms-4">
+                                    Future-Proofing Your Software: A Deep Dive into Clean Architecture for Sustainable Software Development
+                                        <span class="small">by Maarten Vandeperre</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/300215950/">You Can Build Web UI Using Java Only & Braving the Change</a>
                 </div>
                 <span>
