--- a/visit-belgium-tips.html
+++ b/visit-belgium-tips.html
@@ -291,6 +291,33 @@ micro roastery.</p>
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/303888738">Open Rewrite: A la carte</a>
+                            </div>
+                            <span>
+                                Sopra Steria - Thu 24 October 2024
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                Open Rewrite: A la carte
+                                                    <span class="small">by Tim te Beek</span>
+                                            </li>
+                                    </ul>
+                            </span>
+                        </li>
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/">Secret</a>
+                            </div>
+                            <span>
+                                / - Tue 5 November 2024
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                Not known yet
+                                            </li>
+                                    </ul>
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
