--- a/events-archive.html
+++ b/events-archive.html
@@ -67,13 +67,13 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
-                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/">Secret</a>
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/304091973">"Know your Java" with Dr. Venkat Subramaniam</a>
                 </div>
                 <span>
-                    / - Tue 5 November 2024
+                    HE2B - ESI - Ecole Supérieure d'Informatique - Tue 5 November 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
-                                    Not known yet
+                                    Know your Java
                                 </li>
                         </ul>
                 </span>
