--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -213,13 +213,13 @@ A partner should be able to provide:</p>
                         </li>
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/">Secret</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/304091973">"Know your Java" with Dr. Venkat Subramaniam</a>
                             </div>
                             <span>
-                                / - Tue 5 November 2024
+                                HE2B - ESI - Ecole Supérieure d'Informatique - Tue 5 November 2024
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                Not known yet
+                                                Know your Java
                                             </li>
                                     </ul>
                             </span>
