deploy: 0e4316a010f8ab347b895b5c54ca72b3ce3897e9

--- a/events-archive.html
+++ b/events-archive.html
@@ -67,6 +67,19 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/304395041/">"Java Evolutions" with Badr Kacimi and Simon Ritter</a>
+                </div>
+                <span>
+                    Colruyt, Zwijnaarde - Mon 2 December 2024
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Java Evolutions
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/304091973">"Know your Java" with Dr. Venkat Subramaniam</a>
                 </div>
                 <span>
