--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -199,27 +199,13 @@ A partner should be able to provide:</p>
             <ul class="list-unstyled">
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/303888738">Open Rewrite: A la carte</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/304395041/">"Java Evolutions" with Badr Kacimi and Simon Ritter</a>
                             </div>
                             <span>
-                                Sopra Steria - Thu 24 October 2024
+                                Colruyt, Zwijnaarde - Mon 2 December 2024
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                Open Rewrite: A la carte
-                                                    <span class="small">by Tim te Beek</span>
-                                            </li>
-                                    </ul>
-                            </span>
-                        </li>
-                        <li class="mb-2">
-                            <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/304091973">"Know your Java" with Dr. Venkat Subramaniam</a>
-                            </div>
-                            <span>
-                                HE2B - ESI - Ecole Supérieure d'Informatique - Tue 5 November 2024
-                                    <ul class="list-unstyled">
-                                            <li class="ms-4">
-                                                Know your Java
+                                                Java Evolutions
                                             </li>
                                     </ul>
                             </span>
