deploy: 62f5f4c6d79e4fbb1719db424955b0ce12c6ffa5

--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -202,7 +202,7 @@ A partner should be able to provide:</p>
                                     <a href="https://www.meetup.com/belgian-java-user-group/events/304395041/">"Java Evolutions" with Badr Kacimi and Simon Ritter</a>
                             </div>
                             <span>
-                                Colruyt, Zwijnaarde - Mon 2 December 2024
+                                Colruyt Group, Zwijnaarde - Mon 2 December 2024
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
                                                 Java Evolutions
