--- a/events-archive.html
+++ b/events-archive.html
@@ -83,7 +83,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/304091973">"Know your Java" with Dr. Venkat Subramaniam</a>
                 </div>
                 <span>
-                    HE2B - ESI - Ecole Supérieure d'Informatique - Tue 5 November 2024
+                    HE2B - ESI - Ecole Supérieure d'Informatique, Brussels - Tue 5 November 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Know your Java
@@ -96,7 +96,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/303888738">Open Rewrite: A la carte</a>
                 </div>
                 <span>
-                    Sopra Steria - Thu 24 October 2024
+                    Sopra Steria, Grimbergen - Thu 24 October 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Open Rewrite: A la carte
@@ -110,7 +110,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/303217368">Testing done right + Maven Marvels</a>
                 </div>
                 <span>
-                    Burgerij Eilandje - Axxes - Thu 26 September 2024
+                    Burgerij Eilandje - Axxes, Antwerp - Thu 26 September 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Testing done right: From bugs to brilliance
@@ -136,7 +136,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/301217259">Pair Programming with GitHub Copilot + Lessons learned from #JavaOnRaspberryPi</a>
                 </div>
                 <span>
-                    TVH - Vichtseweg 129, 8790 Waregem - Mon 24 June 2024
+                    TVH, Waregem - Mon 24 June 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     The Future of Pair Programming with GitHub Copilot
@@ -154,7 +154,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/300799323">Generative AI in practice and Future-Proofing Your Software</a>
                 </div>
                 <span>
-                    Oniryx - Wed 29 May 2024
+                    Oniryx, Gembloux - Wed 29 May 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Generative AI in practice: Concrete LLM use cases in Java, with Gemini
@@ -172,7 +172,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/300215950/">You Can Build Web UI Using Java Only & Braving the Change</a>
                 </div>
                 <span>
-                    Haute école Léonard de Vinci - Tue 23 April 2024
+                    Haute école Léonard de Vinci, Woluwe - Tue 23 April 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     You Can Build Web UI Using Java Only
@@ -190,7 +190,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/299479389/">Java 22 - Treats for Everyone & Developer Productivity with Jakarta EE 11</a>
                 </div>
                 <span>
-                    Continuum Consulting NV - Tue 19 March 2024
+                    Continuum Consulting NV, Hasselt - Tue 19 March 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Java 22 - Treats for Everyone!
@@ -208,7 +208,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/298755642/">Lille invades Kortrijk: Kestra (Event Orchestrator) + Apache Pulsar (Messaging)</a>
                 </div>
                 <span>
-                    Sweet Mustard - Mon 26 February 2024
+                    Sweet Mustard, Kortrijk - Mon 26 February 2024
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Kestra: an OpenSource Event Driven Declarative Orchestrator written in Java
@@ -234,7 +234,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/297395858/">Distributed Background Jobs with JobRunr & Maintenance Scheduling with Timefold</a>
                 </div>
                 <span>
-                    MeetDistrict Ghelamco Arena - Tue 5 December 2023
+                    MeetDistrict Ghelamco Arena, Gent - Tue 5 December 2023
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     A Java 8 Lambda and JobRunr is all you need for distributed background jobs
@@ -252,7 +252,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/296580070/">Opentelemetry and continuous feedback & Your tests also need some architecting</a>
                 </div>
                 <span>
-                    Brugge - Wed 15 November 2023
+                    Liantis, Brugge - Wed 15 November 2023
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     OpenTelemetry and Continuous Feedback - Things you need to know about your Java code at runtime
@@ -278,7 +278,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/295051128/">Composable Architecture & Event Sourced Applications without Grey Hair</a>
                 </div>
                 <span>
-                    Leuven - Thu 7 September 2023
+                    AE, Leuven - Thu 7 September 2023
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     How Composable Architectures can actually solve the reasons for Microservices
@@ -296,7 +296,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/294251222/">Beyond Senior Java Dev</a>
                 </div>
                 <span>
-                    Gembloux - Fri 7 July 2023
+                    Oniryx, Gembloux - Fri 7 July 2023
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Beyond Senior Java Dev: the next steps for the technical career
@@ -314,7 +314,7 @@
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/293805252/">Hybrid Cloud Applications & Cloud-Native Dev Tools</a>
                 </div>
                 <span>
-                    Brussel - Thu 22 June 2023
+                    Red Hat, Brussel - Thu 22 June 2023
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Hybrid Cloud Applications Built with Pure Openness
