--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -186,6 +186,9 @@ A partner should be able to provide:</p>
 <p>For historical reasons and to not give a company any preferential treatment, we do not leave room for the hosting company to introduce themselves or present any sort of "promo" talk for the company;</p>
 </li>
 <li>
+<p>We do not accept video recording at the event by our partners. This is both to protect our speakers and our visitors. Photos are ok as long as it&#8217;s done with <em>explicit</em> consent (group photo) or if the attendees are not recognizable (photo taken from the back of the room during a talk).</p>
+</li>
+<li>
 <p>After the event is announced on the official BeJUG channels, the host will receive a set of links (1 for each platform) so they can retweet/repost/share among their own network.</p>
 </li>
 </ul>
