--- a/events-archive.html
+++ b/events-archive.html
@@ -67,6 +67,38 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/305958065">AI Powered Applications in Java & Deploying with Confidence - Andres Almiray</a>
+                </div>
+                <span>
+                    J-Crafters, Kontich - Wed 26 February 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    AI Powered Applications in Java & Deploying with Confidence
+                                        <span class="small">by Andres Almiray</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/305632961">Introduction to OpenTelemetry and Tulips to Turmeric</a>
+                </div>
+                <span>
+                    AE, Leuven - Mon 3 February 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Practical introduction to OpenTelemetry tracing
+                                        <span class="small">by Nicolas Fränkel</span>
+                                </li>
+                                <li class="ms-4">
+                                    Tulips to Turmeric: Lessons Learned from a Global Team
+                                        <span class="small">by Rijo Sam</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/304395041/">"Java Evolutions" with Badr Kacimi and Simon Ritter</a>
                 </div>
                 <span>
@@ -74,6 +106,7 @@
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Java Evolutions
+                                        <span class="small">by Simon Ritter</span>
                                 </li>
                         </ul>
                 </span>
@@ -87,6 +120,7 @@
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     Know your Java
+                                        <span class="small">by Venkat Subramaniam</span>
                                 </li>
                         </ul>
                 </span>
