--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -200,6 +200,20 @@ A partner should be able to provide:</p>
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/305958065">AI Powered Applications in Java & Deploying with Confidence - Andres Almiray</a>
+                            </div>
+                            <span>
+                                J-Crafters, Kontich - Wed 26 February 2025
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                AI Powered Applications in Java & Deploying with Confidence
+                                                    <span class="small">by Andres Almiray</span>
+                                            </li>
+                                    </ul>
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
