deploy: 24ad3b25c1bac01f56efff488ed57cabab4a17bf

--- a/events-archive.html
+++ b/events-archive.html
@@ -67,6 +67,38 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/307065349/">Event Driven in the Wild with Kafka</a>
+                </div>
+                <span>
+                    Randstad Digital, Leuven - Tue 6 May 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Event Driven in the Wild with Kafka
+                                        <span class="small">by Jonas Geiregat</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/307065349/">All you need to know about Maven 4</a>
+                </div>
+                <span>
+                    NSI, Awans - Thu 24 April 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    All you need to know about Maven 4
+                                        <span class="small">by Matthias Bünger</span>
+                                </li>
+                                <li class="ms-4">
+                                    Revisiting the visitor pattern using Data-Oriented Programming techniques.
+                                        <span class="small">by Wim De Troyer</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/305958065">AI Powered Applications in Java & Deploying with Confidence - Andres Almiray</a>
                 </div>
                 <span>
