--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
             <ul class="list-unstyled">
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/305958065">AI Powered Applications in Java & Deploying with Confidence - Andres Almiray</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/307065349/">Event Driven in the Wild with Kafka</a>
                             </div>
                             <span>
-                                J-Crafters, Kontich - Wed 26 February 2025
+                                Randstad Digital, Leuven - Tue 6 May 2025
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                AI Powered Applications in Java & Deploying with Confidence
-                                                    <span class="small">by Andres Almiray</span>
+                                                Event Driven in the Wild with Kafka
+                                                    <span class="small">by Jonas Geiregat</span>
                                             </li>
                                     </ul>
                             </span>
