--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -52,6 +52,7 @@
                     <li class="nav-item"><a class="nav-link" href="partnership-guidelines.html">Partnership-guidelines</a></li>
                     <li class="nav-item"><a class="nav-link" href="visit-belgium-tips.html">Visit Belgium Tips</a></li>
                     <li class="nav-item"><a class="nav-link" href="events-archive.html">Events archive</a></li>
+                    <li class="nav-item"><a class="nav-link" href="raffle.html">Winner Raffle</a></li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="p-2"><a style="color: #55acee" href="https://twitter.com/BeJUG" role="button"><i class="fa-brands fa-twitter"></i></a></li>
