deploy: 8919f1eb13db08028abf3fb7fe4dea1947c89808

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/307909476/">INFORMAL - 30 Years of Java @ Bier Central (Antwerp)</a>
+                            </div>
+                            <span>
+                                Bier Central, Antwerpen - Fri 23 May 2025
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
