--- a/events-archive.html
+++ b/events-archive.html
@@ -68,6 +68,14 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/307909476/">INFORMAL - 30 Years of Java @ Bier Central (Antwerp)</a>
+                </div>
+                <span>
+                    Bier Central, Antwerpen - Fri 23 May 2025
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/307065349/">Event Driven in the Wild with Kafka</a>
                 </div>
                 <span>
@@ -76,6 +84,10 @@
                                 <li class="ms-4">
                                     Event Driven in the Wild with Kafka
                                         <span class="small">by Jonas Geiregat</span>
+                                </li>
+                                <li class="ms-4">
+                                    Scared of the ExecutorService? Try JobRunr Jobs instead!
+                                        <span class="small">by Wouter Groeneveld</span>
                                 </li>
                         </ul>
                 </span>
